syntax = "proto3";

package raft;

option java_package = "org.gautelis.raft.proto";
option java_multiple_files = true;
option java_outer_classname = "RaftProtos";
option optimize_for = LITE_RUNTIME;

message Envelope {
  string correlation_id = 1;
  string type = 2;
  bytes payload = 3;
}

message Heartbeat {
  int64 term = 1;
  string peer_id = 2;
}

message VoteRequest {
  int64 term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message VoteResponse {
  string peer_id = 1;
  int64 term = 2;
  bool vote_granted = 3;
  int64 current_term = 4;
}

message LogEntry {
  int64 term = 1;
  string peer_id = 2;
  bytes data = 3;
}

message ClusterMessage {
  int64 term = 1;
  string peer_id = 2;
  string message = 3;
}
